[package]
name = "countme"
version = "0.1.0"
authors = ["Omid Rad <omidmr@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }

# It'll be used inside Docker
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 0