[package]
name = "countme"
version = "0.1.0"
authors = ["Omid Rad <omidmr@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version="3.0.0-alpha.1", default-features=false }
actix-rt = "*"

# It'll be used inside Docker
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 0