[package]
name = "prime"
version = "0.1.0"
authors = ["Omid Rad <omidmr@gmail.com>"]
edition = "2018"

[dependencies]
primal = "0.2"
fxhash = "0.2"

mimalloc = { version = "0.1", default-features = false }

# It'll be used inside Docker
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 0